--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <a href="week14.html"><b>14</b></a>
 <a href="week15.html"><b>15</b></a>
 <a href="week16.html"><b>16</b></a>
-<a href="week17.html"><b>17P</b></a><br>
+<a href="week17.html"><b>17</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -85,7 +85,7 @@
 <tr><td><font size=2>States(3)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>11115</font></td>
+    <td><font size=2>11710</font></td>
     <td><font size=2>9850</font></td>
     <td><font size=2>1010</font></td>
     <td><font size=2>210</font></td>
@@ -101,7 +101,7 @@
 <tr><td><font size=2>Rich(1)</font></td>
     <td><font size=2>8</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>10440</font></td>
+    <td><font size=2>10935</font></td>
     <td><font size=2>9540</font></td>
     <td><font size=2>1030</font></td>
     <td><font size=2>250</font></td>
@@ -157,7 +157,7 @@
 <tr><td><font size=2>Matthew(10)</font></td>
     <td><font size=2>4</font></td>
     <td><font size=2>11</font></td>
-    <td><font size=2>8435</font></td>
+    <td><font size=2>9075</font></td>
     <td><font size=2>10285</font></td>
     <td><font size=2>940</font></td>
     <td><font size=2>195</font></td>
