--- a/week17.html
+++ b/week17.html
@@ -7,58 +7,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (2)</b></font></td></tr>
-<tr><td>Allen (D)</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Allen (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>Chubb</td>         <td></td><td align=right>250</td></tr>
 <tr><td>Hunt</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Thielen</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Thielen</td>       <td></td><td align=right>25</td></tr>
 <tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Fairbairn</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Taylor</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Waller</td>        <td></td><td align=right>160</td></tr>
+<tr><td>Fairbairn</td>     <td></td><td align=right>155</td></tr>
+<tr><td>Taylor</td>        <td></td><td align=right>375</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (8)</b></font></td></tr>
-<tr><td>Rodgers (D)</td>   <td></td><td align=right>0</td></tr>
-<tr><td>Mattison</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Drake (D)</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Rodgers (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>Mattison</td>      <td></td><td align=right>220</td></tr>
+<tr><td>Moss (D)</td>      <td></td><td align=right>***</td></tr>
 <tr><td>Robinson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>MThomas (D)</td>   <td></td><td align=right>0</td></tr>
+<tr><td>MThomas (D)</td>   <td></td><td align=right>***</td></tr>
 <tr><td>JSmith</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Zuerlein</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Tagovailoa</td>    <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Zuerlein</td>      <td></td><td align=right>170</td></tr>
+<tr><td>Tagovailoa</td>    <td></td><td align=right>140</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (1)</b></font></td></tr>
-<tr><td>Tannehill</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Tannehill</td>     <td></td><td align=right>150</td></tr>
 <tr><td>Singletary</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Carson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Godwin</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Diggs</td>         <td></td><td align=right>35</td></tr>
+<tr><td>Godwin</td>        <td></td><td align=right>215</td></tr>
 <tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Succop</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Succop</td>        <td></td><td align=right>95</td></tr>
 <tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>495</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (3)</b></font></td></tr>
-<tr><td>Watson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>RJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Ridley</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Jefferson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Watson</td>        <td></td><td align=right>265</td></tr>
+<tr><td>AJones</td>        <td></td><td align=right>50</td></tr>
+<tr><td>RJones</td>        <td></td><td align=right>85</td></tr>
+<tr><td>Ridley</td>        <td></td><td align=right>25</td></tr>
+<tr><td>Jefferson</td>     <td></td><td align=right>65</td></tr>
 <tr><td>Gronkowski</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Blankenship</td>   <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Tucker</td>        <td></td><td align=right>55</td></tr>
+<tr><td>Blankenship</td>   <td></td><td align=right>50</td></tr>
+<tr><td></td>              <td></td><td align=right>595</td></tr>
 </table>
 </td>
 </tr>
@@ -66,58 +66,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (4)</b></font></td></tr>
-<tr><td>Ryan</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Montgomery</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Gallman</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Ryan</td>          <td></td><td align=right>165</td></tr>
+<tr><td>Montgomery</td>    <td></td><td align=right>80</td></tr>
+<tr><td>Gallman</td>       <td></td><td align=right>30</td></tr>
+<tr><td>Lockett</td>       <td></td><td align=right>170</td></tr>
 <tr><td>Beasley</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Kelce (D)</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Kelce (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>Butker</td>        <td></td><td align=right>15</td></tr>
 <tr><td>Ruggs</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (5)</b></font></td></tr>
-<tr><td>Wilson (D)</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Wilson (D)</td>    <td></td><td align=right>***</td></tr>
 <tr><td>Fournette</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Gaskin</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Hill (D)</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Gaskin</td>        <td></td><td align=right>75</td></tr>
+<tr><td>Hill (D)</td>      <td></td><td align=right>***</td></tr>
 <tr><td>Anderson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>LThomas</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Sanders</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>LThomas</td>       <td></td><td align=right>75</td></tr>
+<tr><td>Sanders</td>       <td></td><td align=right>85</td></tr>
+<tr><td>Bass</td>          <td></td><td align=right>40</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (6)</b></font></td></tr>
-<tr><td>Brady (D)</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Wilson</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Brady (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>Ekeler</td>        <td></td><td align=right>50</td></tr>
+<tr><td>Wilson</td>        <td></td><td align=right>185</td></tr>
 <tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Higbee</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Crosby</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Gibson</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Crosby</td>        <td></td><td align=right>25</td></tr>
+<tr><td>Gibson</td>        <td></td><td align=right>35</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (7)</b></font></td></tr>
-<tr><td>Cousins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Dobbins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Adams (D)</td>     <td></td><td align=right>0</td></tr>
-<tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Carlson</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Herbert</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Cousins</td>       <td></td><td align=right>325</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>425</td></tr>
+<tr><td>Dobbins</td>       <td></td><td align=right>330</td></tr>
+<tr><td>Adams (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>McLaurin</td>      <td></td><td align=right>50</td></tr>
+<tr><td>Kittle</td>        <td></td><td align=right>30</td></tr>
+<tr><td>Carlson</td>       <td></td><td align=right>45</td></tr>
+<tr><td>Herbert</td>       <td></td><td align=right>280</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 </tr>
@@ -125,29 +125,29 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (9)</b></font></td></tr>
-<tr><td>Mayfield</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Kamara (D)</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Mayfield</td>      <td></td><td align=right>25</td></tr>
+<tr><td>Kamara (D)</td>    <td></td><td align=right>***</td></tr>
 <tr><td>MBrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Hilton</td>        <td></td><td align=right>0</td></tr>
-<tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Tonyan</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
-<tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Hilton</td>        <td></td><td align=right>80</td></tr>
+<tr><td>ABrown</td>        <td></td><td align=right>125</td></tr>
+<tr><td>Tonyan</td>        <td></td><td align=right>50</td></tr>
+<tr><td>Koo</td>           <td></td><td align=right>55</td></tr>
+<tr><td>Hurts</td>         <td></td><td align=right>200</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (10)</b></font></td></tr>
-<tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Ballage</td>       <td></td><td align=right>0</td></tr>
+<tr><td>LJackson</td>      <td></td><td align=right>245</td></tr>
+<tr><td>Jacobs</td>        <td></td><td align=right>240</td></tr>
+<tr><td>Ballage</td>       <td></td><td align=right>50</td></tr>
 <tr><td>Cooper</td>        <td></td><td align=right>0</td></tr>
 <tr><td>CDavis</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Graham</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Slye</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Ahmed</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Slye</td>          <td></td><td align=right>5</td></tr>
+<tr><td>Ahmed</td>         <td></td><td align=right>100</td></tr>
+<tr><td></td>              <td></td><td align=right>640</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -177,7 +177,7 @@
 <tr><td><font size=2>States(3)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>11115</font></td>
+    <td><font size=2>11710</font></td>
     <td><font size=2>9850</font></td>
     <td><font size=2>1010</font></td>
     <td><font size=2>210</font></td>
@@ -193,7 +193,7 @@
 <tr><td><font size=2>Rich(1)</font></td>
     <td><font size=2>8</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>10440</font></td>
+    <td><font size=2>10935</font></td>
     <td><font size=2>9540</font></td>
     <td><font size=2>1030</font></td>
     <td><font size=2>250</font></td>
@@ -249,7 +249,7 @@
 <tr><td><font size=2>Matthew(10)</font></td>
     <td><font size=2>4</font></td>
     <td><font size=2>11</font></td>
-    <td><font size=2>8435</font></td>
+    <td><font size=2>9075</font></td>
     <td><font size=2>10285</font></td>
     <td><font size=2>940</font></td>
     <td><font size=2>195</font></td>
