--- a/week17.html
+++ b/week17.html
@@ -7,7 +7,7 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (2)</b></font></td></tr>
-<tr><td>Allen (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>Allen (D)</td>     <td></td><td align=right>230</td></tr>
 <tr><td>Chubb</td>         <td></td><td align=right>250</td></tr>
 <tr><td>Hunt</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Thielen</td>       <td></td><td align=right>25</td></tr>
@@ -15,7 +15,7 @@
 <tr><td>Waller</td>        <td></td><td align=right>160</td></tr>
 <tr><td>Fairbairn</td>     <td></td><td align=right>155</td></tr>
 <tr><td>Taylor</td>        <td></td><td align=right>375</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>1195</td></tr>
 </table>
 </td>
 <td>
@@ -23,9 +23,9 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (8)</b></font></td></tr>
 <tr><td>Rodgers (D)</td>   <td></td><td align=right>***</td></tr>
 <tr><td>Mattison</td>      <td></td><td align=right>220</td></tr>
-<tr><td>Moss (D)</td>      <td></td><td align=right>***</td></tr>
+<tr><td>Moss (D)</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Robinson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>MThomas (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>MThomas (D)</td>   <td></td><td align=right>110</td></tr>
 <tr><td>JSmith</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Zuerlein</td>      <td></td><td align=right>170</td></tr>
 <tr><td>Tagovailoa</td>    <td></td><td align=right>140</td></tr>
@@ -80,7 +80,7 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (5)</b></font></td></tr>
-<tr><td>Wilson (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Wilson (D)</td>    <td></td><td align=right>175</td></tr>
 <tr><td>Fournette</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Gaskin</td>        <td></td><td align=right>75</td></tr>
 <tr><td>Hill (D)</td>      <td></td><td align=right>***</td></tr>
@@ -95,7 +95,7 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (6)</b></font></td></tr>
-<tr><td>Brady (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>Brady (D)</td>     <td></td><td align=right>220</td></tr>
 <tr><td>Ekeler</td>        <td></td><td align=right>50</td></tr>
 <tr><td>Wilson</td>        <td></td><td align=right>185</td></tr>
 <tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
@@ -103,7 +103,7 @@
 <tr><td>Higbee</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Crosby</td>        <td></td><td align=right>25</td></tr>
 <tr><td>Gibson</td>        <td></td><td align=right>35</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>515</td></tr>
 </table>
 </td>
 <td>
@@ -126,14 +126,14 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (9)</b></font></td></tr>
 <tr><td>Mayfield</td>      <td></td><td align=right>25</td></tr>
-<tr><td>Kamara (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Kamara (D)</td>    <td></td><td align=right>95</td></tr>
 <tr><td>MBrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Hilton</td>        <td></td><td align=right>80</td></tr>
 <tr><td>ABrown</td>        <td></td><td align=right>125</td></tr>
 <tr><td>Tonyan</td>        <td></td><td align=right>50</td></tr>
 <tr><td>Koo</td>           <td></td><td align=right>55</td></tr>
 <tr><td>Hurts</td>         <td></td><td align=right>200</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>630</td></tr>
 </table>
 </td>
 <td>
@@ -201,7 +201,7 @@
 <tr><td><font size=2>Grant(9)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>10385</font></td>
+    <td><font size=2>11015</font></td>
     <td><font size=2>9360</font></td>
     <td><font size=2>1005</font></td>
     <td><font size=2>240</font></td>
@@ -217,9 +217,9 @@
 <tr><td><font size=2>Steven(2)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>11515</font></td>
+    <td><font size=2>12710</font></td>
     <td><font size=2>9330</font></td>
-    <td><font size=2>1125</font></td>
+    <td><font size=2>1195</font></td>
     <td><font size=2>255</font></td>
     <td><font size=2>5</font></td></tr>
 <tr><td><font size=2>Randy(8)</font></td>
@@ -241,7 +241,7 @@
 <tr><td><font size=2>John(6)</font></td>
     <td><font size=2>5</font></td>
     <td><font size=2>10</font></td>
-    <td><font size=2>9355</font></td>
+    <td><font size=2>9870</font></td>
     <td><font size=2>10550</font></td>
     <td><font size=2>830</font></td>
     <td><font size=2>370</font></td>
